# VPRD

./: CITATION.cff  LICENSE  README.md  env.yml  pyproject.toml
docs/: conf.py  index.rst
docs/notebooks/: data_merging.ipynb  examples.rst  image_to_electron_power.ipynb  train_mlp_model.ipynb
docs/poster_neurips/: poster_neurips.svgz
docs/source/: modules.rst  vprd.rst
src/vprd/: __init__.py  data.py  image_processing.py  models.py
