[build-system]
requires = ["setuptools", "setuptools_scm[toml]>7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vprd" #Virtual Pulse Reconstruction Diagnostic 
description = "Virtual Pulse Reconstruction Diagnostic"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Till Korten", email = "t.korten@hzdr.de"},
]
keywords = ["simulation based inference", "python", "torch"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "h5py",
    "tables",
    "pandas",
    "pyclesperanto", #for image processing
    "torch",
    "scikit-learn",
    "tensorboard",
    "lightning",
    "seaborn",
    "scipy",
    "statsmodels",
    "jupyter",
    "matplotlib",
    
]
version = "0.1.0"

# [project.scripts]
# sim-uncrushed = "sor.uncrushed:main"

[tool.setuptools]
# packages = ["vprd"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["vprd*"]
namespaces = true

[project.optional-dependencies]
dev = ["pytest","jupyter","matplotlib"]

[tool.pytest.ini_options]
markers = [
    "slow: tests as slow (deselect with '-m \"not slow\"')",
    #"gpu: tests that require a gpu (deselect with '-m \"not gpu\"')",
]
filterwarnings = ["ignore:.*Please use.*:DeprecationWarning",]
pythonpath = [".",]
testpaths = [ "tests" ]
